--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,35 @@
-django-cms>=3.6,<3.7
-djangocms-admin-style>=1.3,<1.5
-django-treebeard>=4.0,<5.0
-
-djangocms-text-ckeditor>=3.7,<3.8
-djangocms-link>=2.3
-djangocms-style>=2.1
-djangocms-googlemap>=1.2
-djangocms-snippet>=2.1,<2.2
-djangocms-video>=2.0,<2.2
-djangocms-column>=1.9
-djangocms-file>=2.2,<3.0
-djangocms-picture>=2.0,<2.2
-easy_thumbnails
-django-filer>=1.3
-Django<2.0
-django-classy-tags>=0.9
-django-sekizai>=1.0
-django-mptt>0.9
-html5lib>=1.0.1
-Pillow>=3.0
-six
-pytz
+asgiref==3.3.1
+dj-database-url==0.5.0
+Django==3.1.4
+django-classy-tags==2.0.0
+django-cms==3.8.0
+django-filer==2.0.2
+django-formtools==2.2
+django-js-asset==1.2.2
+django-mptt==0.10.0
+django-polymorphic==3.0.0
+django-sekizai==2.0.0
+django-treebeard==4.3
+djangocms-admin-style==1.4.0
+djangocms-attributes-field==2.0.0
+djangocms-column==1.11.0
+djangocms-file==3.0.0
+djangocms-googlemap==2.0.0
+djangocms-installer==2.0.0
+djangocms-link==3.0.0
+djangocms-picture==3.0.0
+djangocms-snippet==3.0.0
+djangocms-style==3.0.0
+djangocms-text-ckeditor==4.0.0
+djangocms-video==3.0.0
+easy-thumbnails==2.7.1
+html5lib==1.0.1
+mysqlclient==1.4.2.post1
+Pillow==6.1.0
+pkg-resources==0.0.0
+pytz==2019.1
+six==1.12.0
+sqlparse==0.3.0
+tzlocal==1.5.1
+Unidecode==1.0.23
+webencodings==0.5.1
