--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.3.1
+attrs==19.3.0
+audio-metadata==0.11.1
+bidict==0.21.2
+bitstruct==8.11.1
 dj-database-url==0.5.0
 Django==3.1.4
 django-classy-tags==2.0.0
@@ -6,6 +10,7 @@ django-cms==3.8.0
 django-filer==2.0.2
 django-formtools==2.2
 django-js-asset==1.2.2
+django-licensing==1.0.4
 django-mptt==0.10.0
 django-polymorphic==3.0.0
 django-sekizai==2.0.0
@@ -24,13 +29,23 @@ djangocms-text-ckeditor==4.0.0
 djangocms-video==3.0.0
 easy-thumbnails==2.7.1
 html5lib==1.0.1
+importlib-metadata==3.3.0
+Markdown==3.3.3
+more-itertools==8.6.0
 mysqlclient==1.4.2.post1
+pendulum==2.1.2
 Pillow==7.2.0
 pkg-resources==0.0.0
+pprintpp==0.4.0
+python-dateutil==2.8.1
 pytz==2019.1
+pytzdata==2020.1
 six==1.12.0
 sqlparse==0.3.0
+tbm-utils==2.6.0
+typing-extensions==3.7.4.3
 tzlocal==1.5.1
 Unidecode==1.0.23
 webencodings==0.5.1
-markdown==3.3.3
+wrapt==1.12.1
+zipp==3.4.0
