--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ attrs==19.3.0
 audio-metadata==0.11.1
 bidict==0.21.2
 bitstruct==8.11.1
+certifi==2020.12.5
+chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.4
 django-classy-tags==2.0.0
@@ -31,6 +33,7 @@ djangocms-video==3.0.0
 djangorestframework==3.12.2
 easy-thumbnails==2.7.1
 html5lib==1.0.1
+idna==2.10
 importlib-metadata==3.3.0
 Markdown==3.3.3
 more-itertools==8.6.0
@@ -42,12 +45,14 @@ pprintpp==0.4.0
 python-dateutil==2.8.1
 pytz==2019.1
 pytzdata==2020.1
+requests==2.25.1
 six==1.12.0
 sqlparse==0.3.0
 tbm-utils==2.6.0
 typing-extensions==3.7.4.3
 tzlocal==1.5.1
 Unidecode==1.0.23
+urllib3==1.26.2
 webencodings==0.5.1
 wrapt==1.12.1
 zipp==3.4.0
