--- a/requirements.txt
+++ b/requirements.txt
@@ -32,15 +32,14 @@ djangocms-text-ckeditor==4.0.0
 djangocms-video==3.0.0
 djangorestframework==3.12.2
 easy-thumbnails==2.7.1
-html5lib==1.0.1
+html5lib==1.1
 idna==2.10
 importlib-metadata==3.3.0
 Markdown==3.3.3
 more-itertools==8.6.0
-mysqlclient==1.4.2.post1
+mysqlclient==2.2.4
 pendulum==2.1.2
 Pillow==8.2.0
-pkg-resources==0.0.0
 pprintpp==0.4.0
 python-dateutil==2.8.1
 pytz==2019.1
