--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ bitstruct==8.11.1
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
-Django==3.1.12
+Django==3.1.13
 django-classy-tags==2.0.0
 django-cms==3.8.0
 django-filer==2.0.2
@@ -39,7 +39,7 @@ Markdown==3.3.3
 more-itertools==8.6.0
 mysqlclient==2.2.4
 pendulum==2.1.2
-Pillow==8.2.0
+pillow==10.2.0
 pprintpp==0.4.0
 python-dateutil==2.8.1
 pytz==2019.1
